@@ -1,0 +1,6 @@
+# List of all the board related files.
+BOARDSRC = ../boards/CQ_STARM/board.c \
+	../boards/common/hw_config.c
+
+# Required include directories
+BOARDINC = ../boards/CQ_STARM
